fix: sudden collapse while loading risks

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -684,20 +684,20 @@ ul.risk-table
   h5
     margin-left: 15px
     margin-bottom: -5px
-    margin-top: 10px
+    margin-top: 5px
   li
     font-size: 13px
     padding: 2px
     width: 120px
     margin-left: 15px
-    height: 30px
     margin-top: -20px
   .risk-values
     margin-top: 20px
     margin-left: -10px
     .columns
       .column
-        margin-top: -5px
+        margin-top: 5px
+        padding: 3px
       .column:nth-child(2)
         text-align: center
         margin-left: -20px
@@ -1138,7 +1138,7 @@ button[disabled], .input[disabled]
   border: 2px solid lighten($default, 40%)
   padding: 10px 10px 0px 10px
   margin-bottom: 10px
-  
+
 .js-duration-button.is-default:hover
   background-color: lighten($red, 10%)
   border-color: lighten($red, 10%)
